fix overflowed paginator on mobile

--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -174,11 +174,9 @@
 @media (max-width: 480px) {
     .pagination-plain > li.next {
         float: initial;
-        padding-left: 0px;
     }
 
     .pagination-plain > li.previous {
         display: initial;
-        padding-right: 0px;
     }
 }
